Attempt to fix image stretching on mobile devices.

--- a/style.css
+++ b/style.css
@@ -318,7 +318,7 @@ footer p {
 
 .contributor img {
   width: 100%;
-  height: 100%;
+  height: fit-content;
 }
 
 .name {
